# octa

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Octafile.yml  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  coverage.yml  tests.yml
crates/octa-cli/: Cargo.toml
crates/octa-cli/src/: error.rs  lib.rs  logger.rs  main.rs
crates/octa-cli/tests/: e2e_test.rs
crates/octa-dag/: Cargo.toml
crates/octa-dag/src/: dag.rs  error.rs  lib.rs
crates/octa-executor/: Cargo.toml
crates/octa-executor/src/: envs.rs  error.rs  executor.rs  function.rs  hash_source.rs  lib.rs  summary.rs  task.rs  timestamp_source.rs  vars.rs
crates/octa-finder/: Cargo.toml
crates/octa-finder/src/: lib.rs
crates/octa-octafile/: Cargo.toml
crates/octa-octafile/src/: command.rs  error.rs  include.rs  lib.rs  octafile.rs  task.rs
crates/octa-plugin/: Cargo.toml
crates/octa-plugin-manager/: Cargo.toml
crates/octa-plugin-manager/src/: lib.rs  plugin_client.rs  plugin_manager.rs
crates/octa-plugin/src/: lib.rs  logger.rs  protocol.rs  socket.rs
crates/octa_plugin_shell/: Cargo.toml
crates/octa_plugin_shell/src/: main.rs
crates/octa_plugin_tpl/: Cargo.toml
crates/octa_plugin_tpl/src/: main.rs
docs/: plugins.md
example/call-task/: Octafile.yml
example/complex/: Octafile.yml
example/environment/: .env  Octafile.yml
example/preconditions/: Octafile.yml
example/run_mode/: Octafile.yml
example/simple/: Octafile.yml
example/sources/: Octafile.yml
example/template/: Octafile.yml
plugins/: test.py
