[package]
name = "octa-cli"
description = "Command line interface for Octa builder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[[bin]]
name = "octa"
path = "src/main.rs"

[dependencies]
octa-octafile = { version = "0.1.0", path = "../octa-octafile" }
octa-executor = { version = "0.1.0", path = "../octa-executor" }
anyhow = { workspace = true }
clap_complete = "4"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
dotenvy = "0.15.7"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
