[package]
name = "octa-cli"
description = "Command line interface for Octa builder"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[[bin]]
name = "octa"
path = "src/main.rs"

[dependencies]
octa-finder = { version = "0.2.0", path = "../octa-finder" }
octa-octafile = { version = "0.2.0", path = "../octa-octafile" }
octa-executor = { version = "0.2.0", path = "../octa-executor" }
octa-plugin-manager = { version = "0.2.0", path = "../octa-plugin-manager" }
octa-plugin = { version = "0.2.0", path = "../octa-plugin" }
clap_complete = "4"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4.39"
colored = "2.1"
dotenvy = "0.15.7"
nu-ansi-term = "0.50.1"
lazy_static = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
sled = "0.34"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
assert_cmd = "2.0.16"
predicates = "3.1.2"
