[package]
name = "octa-executor"
description = "Execute tasks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
octa-octafile = { version = "0.1.0", path = "../octa-octafile" }
octa-dag = { version = "0.1.0", path = "../octa-dag" }
octa-finder = { version = "0.1.0", path = "../octa-finder" }
anyhow = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
byteorder = "1.4"
indexmap = "2.7.0"
glob = "0.3.1"
lazy_static = { workspace = true }
humanize-duration = "0.0.6"
futures = "0.3.31"
serde = { workspace = true }
serde_json = "1.0.133"
sha2 = "0.10"
sled = "0.34"
sys-info = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
[target.'cfg(unix)'.dependencies]
nix = "0.26"

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"
tracing-test = "0.2"
