[package]
name = "octa-executor"
description = "Execute tasks"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
octa-octafile = { version = "0.2.1", path = "../octa-octafile" }
octa-dag = { version = "0.2.1", path = "../octa-dag" }
octa-finder = { version = "0.2.1", path = "../octa-finder" }
octa-plugin = { version = "0.2.1", path = "../octa-plugin" }
octa-plugin-manager = { version = "0.2.1", path = "../octa-plugin-manager" }
anyhow = { workspace = true }
async-trait = { workspace = true }
byteorder = "1.5"
dunce = "1.0.5"
indexmap = "2.9.0"
lazy_static = { workspace = true }
glob = "0.3.2"
humanize-duration = "0.0.7"
futures = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = "0.10"
sled = "0.34"
shellexpand = "3.1.1"
whoami = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
uuid = { version = "1", features = ["v4"] }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
[target.'cfg(unix)'.dependencies]
nix = "0.29"

[dev-dependencies]
tempfile = "3.19"
tracing-test = "0.2"
