[package]
name = "octa-finder"
description = "Find tasks in octafiles hierarchy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
octa-octafile = { version = "0.1.0", path = "../octa-octafile" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
test-log = "0.2"
tracing-test = "0.2"
