[package]
name = "octa-octafile"
description = "Parser for octafile"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
anyhow = { workspace = true }
dirs = "5.0"
serde = { workspace = true }
serde_yml = { workspace = true }
sys-info = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
