[package]
name = "octa-plugin-manager"
description = "Plugin common"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
interprocess = { git = "https://github.com/federico-terzi/interprocess", features = [
  "tokio",
] }
octa-plugin = { version = "0.2.1", path = "../octa-plugin" }
semver = "1.0.26"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
[target.'cfg(unix)'.dependencies]
nix = "0.29"

[dev-dependencies]
tempfile = "3.19"
