[package]
name = "octa-plugin"
description = "Plugin common"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
include = ["src/"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.6"
interprocess = { git = "https://github.com/federico-terzi/interprocess", features = [
  "tokio",
] }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.19"
regex = "1.11"
